--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+absl-py==0.13.0
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==21.2.0
+autopep8==1.5.7
 backcall==0.2.0
 bleach==3.3.1
+cachetools==4.2.2
+certifi==2021.5.30
 cffi==1.14.6
+charset-normalizer==2.0.4
 cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
+google-auth==1.34.0
+google-auth-oauthlib==0.4.5
+grpcio==1.39.0
+idna==3.2
 ipykernel==6.0.3
 ipython==7.25.0
 ipython-genutils==0.2.0
@@ -24,6 +33,7 @@ jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
+Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
@@ -34,6 +44,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.0
 numpy==1.21.1
+oauthlib==3.1.1
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
@@ -43,7 +54,11 @@ pickleshare==0.7.5
 Pillow==8.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
+protobuf==3.17.3
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
 pycparser==2.20
 Pygments==2.9.0
 pyparsing==2.4.7
@@ -53,13 +68,20 @@ pytz==2021.1
 pyzmq==22.1.0
 qtconsole==5.1.1
 QtPy==1.9.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
 scikit-learn==0.24.2
 scipy==1.7.0
 Send2Trash==1.7.1
 six==1.16.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
 terminado==0.10.1
 testpath==0.5.0
 threadpoolctl==2.2.0
+toml==0.10.2
 torch==1.9.0
 torchaudio==0.9.0
 torchvision==0.10.0
@@ -67,7 +89,9 @@ tornado==6.1
 traitlets==5.0.5
 transforms==0.1
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 utils==1.0.1
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.0.1
 widgetsnbextension==3.5.1
