--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,6 @@ defusedxml==0.7.1
 entrypoints==0.3
 google-auth==1.34.0
 google-auth-oauthlib==0.4.5
-grpcio==1.39.0
-idna==3.2
 ipykernel==6.0.3
 ipython==7.25.0
 ipython-genutils==0.2.0
@@ -84,7 +82,7 @@ threadpoolctl==2.2.0
 toml==0.10.2
 torch==1.9.0
 torchaudio==0.9.0
-torchvision==0.10.0
+torchvision~=0.2.2
 tornado==6.1
 traitlets==5.0.5
 transforms==0.1
@@ -95,5 +93,17 @@ wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.1
 widgetsnbextension==3.5.1
+
+future~=0.18.2
+zlib~=1.2.11
+olefile~=0.46
+pip~=21.0.1
+wheel~=0.36.2
+openssl~=1.1.1j
+cryptography~=3.4.7
+setuptools~=52.0.0
+typing_extensions~=3.10.0.0
+dataclasses~=0.8
+click~=8.0.1
 
 opencv-python~=4.5.3.56
